--- a/src/components/Contacto/contacto.css
+++ b/src/components/Contacto/contacto.css
@@ -1,6 +1,6 @@
 /* contacto.css */
 :root {
-  --primary: #ff7d00;
+  --primary: #a66514;
   --primary-dark: #e67000;
   --forest-green: #355e3b; 
   --forest-green-dark: #1a6e1a;
