--- a/src/components/Beneficios/beneficios.css
+++ b/src/components/Beneficios/beneficios.css
@@ -1,6 +1,6 @@
 /* beneficios.css */
 :root {
-  --primary-color: #ff7d00;
+  --primary-color: #a66514;
   --text-color: #0a0a0a;
   --light-bg: #ededed;
   --border-color: #d0d0d0;
@@ -182,7 +182,7 @@
 .nosotros-subtitle {
   font-size: 1.5rem;
   font-weight: 400;
-  color: #ff7d00;
+  color: #a66514;
   margin: 0 0 30px 0;
   line-height: 1.4;
 }
