--- a/src/components/Proyectos/proyectos.css
+++ b/src/components/Proyectos/proyectos.css
@@ -5,9 +5,10 @@
 
 
 
-.section-subtitle {
+.project-subtitle {
   color: white;
-  font-size: 2.3rem;
+  font-size: 2rem;
+  color: white;
   letter-spacing: 3px;
   text-transform: uppercase;
   font-weight: 500;
@@ -24,7 +25,7 @@
 
 .proyectos-subtitle span {
   font-weight: 600;
-  color: #ff7d00;
+  color: #a66514;
 }
 
 .proyectos-title {
@@ -38,7 +39,7 @@
 .proyectos-title span {
   font-weight: 600;
   line-height: 1.3;
-  color: #ff7d00;
+  color: #a66514;
 }
 
 
@@ -63,7 +64,7 @@
   bottom: 0;
   left: 0; /* align with the left edge of the header (and therefore with other components inside the same container) */
   width: 3px;
-  background: #ff7d00;
+  background: #a66514;
 }
 
 .proyectos-container {
@@ -158,9 +159,9 @@
 .proyecto-item:hover .proyecto-btn {
   opacity: 1;
   transform: translateY(0);
-  border-color: #ff7d00;
+  border-color: #a66514;
   background: #ff7b0010;
-  color: #ff7d00;
+  color: #a66514;
 }
 
 /* Responsive */
