--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -19,7 +19,7 @@
 }
 
 .about-container {
-  width: calc(100% - 150px);
+  width: calc(100% - 100px);
   margin: 0 auto;
   padding: 30px;
    border: 1px solid #2d2d2d;
@@ -173,6 +173,9 @@
 /* Responsive */
 @media (max-width: 1024px) {
 
+  .about-section {
+  /* padding: 75px 0 75px 75px ; */
+}
 
   .text-cards-grid {
     grid-template-columns: 1fr;
@@ -181,6 +184,12 @@
 }
 
 @media (max-width: 768px) {
+/* 
+  .about-section {
+  padding: 20px;
+} */
+
+
   .title-box {
     padding: 60px 6% 40px;
   }
@@ -198,8 +207,8 @@
   }
 
   .badge {
-    font-size: 0.75rem;
-    padding: 8px 20px;
+    font-size: 1.1rem;
+    padding: 8px 0px;
   }
 
   .text-card {
@@ -217,7 +226,7 @@
 }
 
 .about-container {
-    width: calc(100% - 80px);
+    width: calc(100% - 60px);
 }
 
 
@@ -230,7 +239,8 @@
   }
 
   .section-title {
-    font-size: 3rem;
+    padding: 0;
+    font-size: rem;
     letter-spacing: -0.5px;
   }
 
@@ -239,7 +249,6 @@
   }
 
   .badge {
-    font-size: 1rem;
     /* padding: 6px 16px; */
   }
 
