--- a/src/components/PorqueElegirnos/porqueElegirnos.module.css
+++ b/src/components/PorqueElegirnos/porqueElegirnos.module.css
@@ -16,9 +16,10 @@
 
 .sectionTitle {
   text-transform: uppercase;
-  font-size: clamp(2rem, 4vw, 2.5rem);
+  font-size: clamp(1.1rem,4vw, 2.2rem);
   font-weight: 400;
   color: var(--text-dark);
+  opacity: 0.9;
   margin-bottom: 15px;
 }
 
@@ -28,9 +29,12 @@
 }
 
 .sectionSubtitle {
-  font-size: 1.1rem;
+  font-size:  clamp(1.0rem,4vw, 1.1rem);
+  font-weight: 500;
   color: var(--text-dark);
   /* opacity: 0.8; */
+  opacity: 0.9;
+
 }
 
 .contentContainer {
@@ -183,6 +187,8 @@
 
 @media (max-width: 800px) {
   .mainContainer {
+    padding-top: 0px;
+    padding-bottom: 50px;
     height: auto;
     overflow-x: hidden;
   }
@@ -205,7 +211,6 @@
 
   .contentContainer {
     height: auto;
-    padding-left: 20px;
     margin: auto;
     align-content: center;
     padding-top: 100px;
