--- a/src/components/Proyectos/proyectos.css
+++ b/src/components/Proyectos/proyectos.css
@@ -1,24 +1,31 @@
 /* styles/Proyectos.css */
 .proyectos-section {
-  background-color: #262626;
+  /* background-color: #262626; */
+  background-color: #ededed;
 }
 
-
-
 .project-subtitle {
-  color: white;
-  font-size: 2rem;
-  color: white;
+  color: #262626;
+  font-size: 2.1rem;
   letter-spacing: 3px;
   text-transform: uppercase;
+  opacity: 0.8;
   font-weight: 500;
   height: auto;
 }
 
+.project-content {
+  position: relative;
+  margin: 0 auto;
+  padding-block: 52px;
+  width: calc(100% - 100px);
+}
+
 .proyectos-subtitle {
-  color: white;
+  color: #262626;
   font-size: 1.5rem;
-  line-height: 1.3;
+  line-height: 1.5;
+  opacity: 0.9;
   font-weight: 300;
   margin-bottom: 0;
 }
@@ -29,7 +36,7 @@
 }
 
 .proyectos-title {
-  color: white;
+  color: #262626;
   font-size: 1.5rem;
   line-height: 1.3;
   font-weight: 300;
@@ -41,7 +48,6 @@
   line-height: 1.3;
   color: #a66514;
 }
-
 
 /* Header wrapper and decorative vertical line */
 .proyectos-header {
@@ -55,10 +61,9 @@
   padding-left: calc(1rem + 3px);
 }
 
-
 /* vertical orange line placed 1rem to the left of the title block */
 .proyectos-header::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   bottom: 0;
@@ -121,7 +126,8 @@
   font-weight: 500;
   margin-bottom: 15px;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  opacity: 0.9;
+  letter-spacing: 1.3px;
 }
 
 .proyecto-btn {
@@ -153,21 +159,17 @@
 
 .proyecto-item:hover .overlay-content {
   transform: translateY(0);
-  
 }
 
 .proyecto-item:hover .proyecto-btn {
   opacity: 1;
   transform: translateY(0);
   border-color: #a66514;
-  background: #ff7b0010;
   color: #a66514;
 }
 
 /* Responsive */
 @media (min-width: 768px) {
-
-
   .proyectos-container {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -189,16 +191,21 @@
 
 @media (max-width: 700px) {
   .proyectos-section {
+    padding-block: 40px;
     /* background-color: #ededed; */
-    padding: 120px 25px;
   }
 
+  .project-content {
+  position: relative;
+  margin: 0 auto;
+  padding-block: 0 ;
+  width: calc(100% - 60px);
+}
 
   .proyectos-title {
     font-size: 1.7rem;
   }
 
-  
   .proyectos-subtitle {
     padding-top: 10px;
     font-size: 1.2rem;
