--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
   --background: #F7F6F7;
-  --main-orange: #E5840B;
+  --main-orange: #a66514;
   --main-green: #0E492B;
   --orange-rgba:#e5830b;
 }
