--- a/src/components/Beneficios/beneficios.css
+++ b/src/components/Beneficios/beneficios.css
@@ -7,6 +7,7 @@
 }
 
 .beneficios-section {
+  /* background-color: #2d2d2d; */
   background-color: #2d2d2d;
   position: relative;
   text-align: center;
