--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -157,7 +157,7 @@
 .card-content p {
   font-size: 1.1rem;
   line-height: 1.8;
-  color: var(--text-color);
+  color: #333333;
   margin-bottom: 1.5rem;
 }
 
