--- a/src/components/Contacto/contacto.css
+++ b/src/components/Contacto/contacto.css
@@ -11,17 +11,22 @@
 }
 
 .contact-section {
-  background-color: #2d2d2d;
+  /* background-color: #2d2d2d; */
+  background-image: url("/inmobiliario1920x1080.webp");
+  background-size: cover;
+  background-position: center;
+  opacity: 2;
+
   /* display: flex;
   flex-direction: row; */
-  position: relative;
+  background-attachment: fixed;
 
   overflow: hidden;
 }
 
 .contact-form-container {
-  padding: 0;
-  width: 100%;
+  background: rgba(27, 26, 26, 0.67);
+
 }
 
 /* Agrega esto a tu contacto.css */
@@ -52,14 +57,17 @@
 
 .form-subtitle {
   font-size: 1rem;
-
   color: rgba(255, 255, 255, 0.8);
   margin-top: 0.5rem;
 }
 
 /* Asegúrate que el formulario no tenga margen superior */
 .contact-form {
-  margin-top: 0;
+  /* background: rgba(27, 26, 26, 0.67); */
+  width: 40%;
+  border-radius: 8px;
+  margin: 30px;
+  color: var(--text-light);
 }
 
 .contact-hero {
@@ -110,20 +118,11 @@
 }
 
 .contact-form-container {
-  background-color: #2d2d2d;
   width: calc(100% - 80px);
   margin: 0 auto;
   display: flex;
-  justify-content: flex-end;
-  /* center children vertically so banner text aligns with the form */
   align-items: center;
   padding-block: 50px 80px;
-}
-
-.contact-form {
-  width: 50%;
-  padding-inline: 40px;
-  color: var(--text-light);
 }
 
 .form-banner {
@@ -138,7 +137,7 @@
 }
 
 .banner-title {
-  font-size: 1.5rem;
+  font-size: 1.9rem;
   opacity: 0.9;
   font-weight: 600;
   letter-spacing: 1px;
@@ -146,11 +145,13 @@
 
 .banner-content {
   margin-top: 0;
+  color: white;
 }
 
 .banner-sub {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   opacity: 0.9;
+  font-weight: 500;
   margin-top: 0.5rem;
 }
 
@@ -168,7 +169,6 @@
   display: block;
   margin-bottom: 0.2rem;
   font-size: 0.9rem;
-  opacity: 0.9;
   font-weight: 500;
   letter-spacing: 0.8px;
 }
@@ -199,9 +199,9 @@
   background-color: #a66514;
   color: white;
   border: none;
-  padding: 1rem 2rem;
+  padding: 0.5rem 2rem;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
   cursor: pointer;
   width: 100%;
   margin-top: 1rem;
@@ -210,12 +210,9 @@
 
 .submit-btn:hover {
   background-color: #4d4600;
-  transform: translateY(1px);
 }
 
-.submit-btn span {
-  opacity: 0.9;
-}
+
 .arrow-icon {
   font-size: 1.2rem;
   transition: transform 0.3s ease;
@@ -335,7 +332,8 @@
 }
 
 @media (max-width: 768px) {
-    .contact-container {
+  .contact-container {
+    padding-bottom: 1rem;
   }
 
   .form-row {
@@ -348,6 +346,7 @@
   }
 
   .contact-form-container {
+    width: calc(100% - 40px);
     padding: 2rem;
   }
 
@@ -358,11 +357,9 @@
 }
 
 @media (max-width: 780px) {
-
-    .contact-container {
-      padding-bottom: 3rem;
+  .contact-container {
+    padding-bottom: 3rem;
   }
-
 
   .hero-content {
     padding: 0 2rem;
@@ -373,12 +370,12 @@
 
   .form-banner {
     width: 100%;
-    margin-block: 3rem 5rem;
+    margin-block: 2.5rem 1rem;
   }
 
   .contact-form-container {
     flex-direction: column;
-    padding: 0;
+    padding-inline: 20px;
   }
 
   .contact-form {
@@ -386,7 +383,7 @@
     padding-inline: 0;
   }
   .hero-title {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
   }
 
   .submit-btn {
