--- a/src/pages/proyectos/projectStyles.css
+++ b/src/pages/proyectos/projectStyles.css
@@ -7,7 +7,8 @@
   line-height: 1.6;
   margin: 0 auto;
   animation: fadeUp 0.6s ease-out;
-  height: 100vh;
+  min-height: 100vh; /* permite crecer pero asegura el alto de pantalla */
+  height: auto !important;
   padding-bottom: 2rem;
 }
 
@@ -62,7 +63,7 @@
 
 .carouselTrack {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: relative;
 }
 
