--- a/src/pages/proyectos/projectStyles.css
+++ b/src/pages/proyectos/projectStyles.css
@@ -8,7 +8,6 @@
   margin: 0 auto;
   animation: fadeUp 0.6s ease-out;
   min-height: 100vh; /* permite crecer pero asegura el alto de pantalla */
-  height: auto !important;
   padding-bottom: 2rem;
 }
 
@@ -69,7 +68,8 @@
 
 .carouselImage {
   width: 100% !important;
-  height: 100vh !important;
+  height: 100vh;
+  max-height: 100vh ;
   object-fit: cover;
   object-position: center center; /* center the crop vertically and horizontally */
   transition: transform 0.5s ease cubic-bezier(0.2, 0.9, 0.2, 1);
@@ -343,9 +343,9 @@
     left: 1rem;
   }
 
-  .projectPage {
+  /* .projectPage {
     height: 2000px;
-  }
+  } */
   .arrows {
     right: 2rem;
   }
